--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,8 @@
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.MainActivity">
+    tools:context=".ui.main.MainActivity"
+      android:background="@color/background">
 
     <LinearLayout
         android:background="@color/background"
@@ -71,7 +72,8 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text="하이드로펌프"
+              android:textScaleX="0.9"
               android:textSize="12dp"/>
           <TextView
               android:textColor="@color/white"
@@ -82,6 +84,7 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
+              android:textScaleX="0.9"
               android:textSize="12dp"/>
           <TextView
               android:textColor="@color/white"
@@ -92,7 +95,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p1_s4"
@@ -102,7 +106,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
         </LinearLayout>
 
         <ImageView
@@ -149,7 +154,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p2_s2"
@@ -159,7 +165,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p2_s3"
@@ -169,7 +176,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p2_s4"
@@ -179,7 +187,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
         </LinearLayout>
 
         <ImageView
@@ -225,7 +234,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p3_s2"
@@ -235,7 +245,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p3_s3"
@@ -245,7 +256,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p3_s4"
@@ -255,7 +267,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
         </LinearLayout>
 
         <ImageView
@@ -300,7 +313,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p4_s2"
@@ -310,7 +324,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p4_s3"
@@ -320,7 +335,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
           <TextView
               android:textColor="@color/white"
               android:id="@+id/p4_s4"
@@ -330,7 +346,8 @@
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:text="몸통박치기"
-              android:textSize="12dp"/>
+              android:textSize="12dp"
+              android:textScaleX="0.9"/>
         </LinearLayout>
 
         <ImageView
