--- a/app/src/main/res/layout/battleroom_dialog.xml
+++ b/app/src/main/res/layout/battleroom_dialog.xml
@@ -44,6 +44,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
-
+    <ProgressBar
+        android:id="@+id/matching_progress"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"/>
 
 </LinearLayout>
