--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,8 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textSize="20dp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_marginTop="10dp"
@@ -119,6 +119,13 @@
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:src="@drawable/pokemon1" />
+
+        <View
+            android:layout_toLeftOf="@id/pokemon1_img"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/gray1" />
       </RelativeLayout>
       <RelativeLayout
           android:id="@+id/pokemon2"
@@ -127,13 +134,14 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1">
+
         <TextView
-            android:textColor="@color/white"
-            android:textSize="20dp"
             android:id="@+id/pokemon2_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"/>
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_marginTop="10dp"
@@ -198,6 +206,13 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:src="@drawable/pokemon1" />
+
+        <View
+            android:layout_toLeftOf="@id/pokemon2_img"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray1"
+            android:layout_alignParentBottom="true"/>
       </RelativeLayout>
       <RelativeLayout
           android:id="@+id/pokemon3"
@@ -278,6 +293,13 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:src="@drawable/pokemon1" />
+
+        <View
+            android:layout_toLeftOf="@id/pokemon3_img"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray1"
+            android:layout_alignParentBottom="true"/>
       </RelativeLayout>
       <RelativeLayout
           android:id="@+id/pokemon4"
