--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,7 +50,7 @@
             android:id="@+id/pokemon1_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="20dp" />
 
@@ -72,7 +72,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="하이드로펌프"
+              android:text=""
               android:textScaleX="0.9"
               android:textSize="12dp"/>
           <TextView
@@ -83,7 +83,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textScaleX="0.9"
               android:textSize="12dp"/>
           <TextView
@@ -94,7 +94,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -105,7 +105,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
         </LinearLayout>
@@ -118,7 +118,7 @@
             android:layout_alignParentBottom="true"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/pokemon1" />
+            android:src="@drawable/pokemon" />
 
         <View
             android:layout_toLeftOf="@id/pokemon1_img"
@@ -139,7 +139,7 @@
             android:id="@+id/pokemon2_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="20dp" />
 
@@ -161,7 +161,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -172,7 +172,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -183,7 +183,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -194,7 +194,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
         </LinearLayout>
@@ -205,7 +205,7 @@
             android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:src="@drawable/pokemon1" />
+            android:src="@drawable/pokemon" />
 
         <View
             android:layout_toLeftOf="@id/pokemon2_img"
@@ -223,11 +223,11 @@
           android:layout_weight="1">
 
         <TextView
-            android:textColor="@color/white"
             android:id="@+id/pokemon3_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text=""
+            android:textColor="@color/white"
             android:textSize="20dp" />
 
         <LinearLayout
@@ -248,7 +248,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -259,7 +259,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -270,7 +270,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -281,7 +281,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
         </LinearLayout>
@@ -292,7 +292,7 @@
             android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:src="@drawable/pokemon1" />
+            android:src="@drawable/pokemon" />
 
         <View
             android:layout_toLeftOf="@id/pokemon3_img"
@@ -308,13 +308,14 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1">
+
         <TextView
-            android:textColor="@color/white"
-            android:textSize="20dp"
             android:id="@+id/pokemon4_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"/>
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_marginTop="10dp"
@@ -334,7 +335,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -345,7 +346,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -356,7 +357,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
           <TextView
@@ -367,7 +368,7 @@
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
-              android:text="몸통박치기"
+              android:text=""
               android:textSize="12dp"
               android:textScaleX="0.9"/>
         </LinearLayout>
@@ -378,7 +379,7 @@
             android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:src="@drawable/pokemon1" />
+            android:src="@drawable/pokemon" />
       </RelativeLayout>
 
     </LinearLayout>
