--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,15 +16,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-      <TextView
-          android:textColor="@color/white"
-          android:id="@+id/text_home"
+      <ImageView
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_margin="5dp"
-          android:layout_gravity="center"
-          android:text="Pokemon Box"
-          android:textSize="20sp" />
+          android:layout_height="35dp"
+          android:layout_marginTop="10dp"
+          android:src="@drawable/pokebox" />
 
       <GridView
           android:background="@color/background800"
