--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -17,20 +17,29 @@
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toTopOf="parent"
-          android:layout_marginTop="95dp"/>
+          android:layout_marginTop="157dp"/>
+
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center">
+        <ImageView
+            android:layout_width="297dp"
+            android:layout_height="97dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/pokeshop" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
-            android:layout_margin="10dp">
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="30dp">
             <ImageButton
                 android:id="@+id/gacha1"
                 android:layout_width="250dp"
