--- a/app/src/main/res/layout/activity_scene.xml
+++ b/app/src/main/res/layout/activity_scene.xml
@@ -150,25 +150,29 @@
           android:id="@+id/battle_btn_skill_1"
           android:layout_width="70dp"
           android:layout_height="70dp"
-          android:layout_weight="1" />
+          android:layout_weight="1"
+          android:textColor="@color/white"/>
 
       <Button
           android:id="@+id/battle_btn_skill_2"
           android:layout_width="70dp"
           android:layout_height="70dp"
-          android:layout_weight="1" />
+          android:layout_weight="1"
+          android:textColor="@color/white"/>
 
       <Button
           android:id="@+id/battle_btn_skill_3"
           android:layout_width="70dp"
           android:layout_height="70dp"
-          android:layout_weight="1" />
+          android:layout_weight="1"
+          android:textColor="@color/white"/>
 
       <Button
           android:id="@+id/battle_btn_skill_4"
           android:layout_width="70dp"
           android:layout_height="70dp"
-          android:layout_weight="1" />
+          android:layout_weight="1"
+          android:textColor="@color/white"/>
     </LinearLayout>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
